--- a/index.html
+++ b/index.html
@@ -43,17 +43,21 @@
 
 
 <section id="welcome-section" class="welcome-section">
-
-<h1>Hello, I am Ariana Spretz,</h1>
+</br> </br> </br>
+<h1>Hello, I am Ariana Spretz.</h1>
 
     <image class="responsive-img" id="photo" src="images/Ariana.jpg" id="photo" alt=""/>
-
-<h2>a student of full stack web and software developer at freeCodeCamp.org.</h2>
-
+<div id="write">
+<h4>I am currently studying programming at freeCodeCamp.org.
+I am seeking to obtain an entry-level programmer position in a dynamic and challenging environment that will allow me to apply and further develop my technical skills in programming to follow a successful career in software development.
+I am eager to work collaboratively with a team and contribute to the development of innovative software solutions while continuously learning and growing as a programmer.
+Proficient in HTML and comfortable working with CSS. Strong problem-solving skills and a passion for learning new technologies.</h4>
+</div>
+      </br> 
 </section>
 
 <section id="projects" class="projects-section">
-<h4>These are some of the technologies I use: HTML5, CSS, Javascript.</h4>
+</br> </br> </br>
 <h3 class="projects-section-header">These are some of my projects</h3>
 
 <div class="projects-grid">
@@ -175,3 +179,4 @@
 </footer>
 
 </html>
+
